fix(front): :dizzy: now logo transition isn't hidden by the h2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,8 @@ header {
                 fill: white;
                 stroke: white;
                 transition: filter .48s ease;
+                position: relative;
+                z-index: 10;
             }
         }
 
@@ -92,7 +94,7 @@ header {
                     gap: .5ch;
                     left: 0;
                     min-width: max-content;
-                    
+
                     span {
                         display: block;
                         translate: 0 -150%;
@@ -168,9 +170,8 @@ main {
     min-height: calc(70svh - 4rem);
 
     h1 {
-        margin: 0;
         text-align: center;
-        margin-bottom: 2rem;
+        margin: 0 0 2rem;
     }
 
     button.listing {
@@ -275,9 +276,9 @@ button {
 
 footer {
     display: flex;
-    width: 100%;
+    width: calc(100% - 2rem * 2);
     text-align: center;
-    /*padding: 2rem;*/
+    padding: 2rem;
     font-size: larger;
     height: 10vh;
     align-items: flex-end;
